force-app/main/default/objects/Peer_Reviewer__c/Peer_Reviewer__c.object-meta.xml
<CustomObject>
    <label>Peer Reviewer</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Peer Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Peer Reviewers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>