force-app/main/default/objects/Peer_Reviewer__c/fields/Created_User__c.field-meta.xml
<CustomField>
    <fullName>Created_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Peer_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>