force-app/main/default/objects/Peer_Reviewer__c/fields/Declined__c.field-meta.xml
<CustomField>
    <fullName>Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Declined</label>
    <type>Checkbox</type>
</CustomField>