force-app/main/default/objects/Peer_Reviewer__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Peer Reviewers</fullName>
                <default>true</default>
                <label>Peer Reviewers</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>