force-app/main/default/objects/Peer_Reviewer__c/fields/Grant_Id_Selected__c.field-meta.xml
<CustomField>
    <fullName>Grant_Id_Selected__c</fullName>
    <label>Grant Id Selected</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>