force-app/main/default/objects/Peer_Reviewer__c/fields/Grant_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Grant_Record_Type_Name__c</fullName>
    <formula>Grants__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Record Type Name</label>
    <type>Text</type>
</CustomField>