force-app/main/default/objects/Peer_Reviewer__c/fields/Grants__c.field-meta.xml
<CustomField>
    <fullName>Grants__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grants</label>
    <referenceTo>Grants__c</referenceTo>
    <relationshipLabel>Peer Reviewers</relationshipLabel>
    <relationshipName>Peer_Reviewers</relationshipName>
    <type>Lookup</type>
</CustomField>