force-app/main/default/objects/Peer_Reviewer__c/fields/Is_User_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_User_Created__c</fullName>
    <formula>NOT(ISBLANK( Created_User__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User Created</label>
    <type>Checkbox</type>
</CustomField>