force-app/main/default/objects/Peer_Reviewer__c/fields/Review_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Request_Date__c</fullName>
    <label>Review Request Date</label>
    <type>Date</type>
</CustomField>