force-app/main/default/objects/Peer_Reviewer__c/fields/Verified_by_User__c.field-meta.xml
<CustomField>
    <fullName>Verified_by_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified by User</label>
    <type>Checkbox</type>
</CustomField>