force-app/main/default/objects/Peer_Reviewer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Designation__c</columns>
    <columns>Declined__c</columns>
    <columns>Is_User_Created__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>